# hands-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  continue.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  TOOLS.md  plugins.md
docs/superpowers/plans/: 2026-07-03-hands-m1-core.md  2026-07-03-hands-m2-perception.md  2026-07-03-hands-m3-desktop-policy.md  2026-07-03-hands-m4-extensibility.md
src/hands/: __init__.py  audit.py  cli.py  config.py  container.py  dispatcher.py  errors.py  metrics.py  permissions.py  registry.py  retry.py  server.py  state.py  types.py
src/hands/driver/: __init__.py  base.py  fake.py  macos.py
src/hands/plugins/: __init__.py  api.py
src/hands/services/: apps.py  clipboard.py  coords.py  keyboard.py  mouse.py  ocr.py  screenshot.py  verification.py  vision.py  waiter.py  windows.py
src/hands/tools/: __init__.py  apps.py  ax.py  clipboard.py  observe.py  pointer.py  sequence.py  typing.py  windows.py
tests/: conftest.py
tests/contract/: test_driver_contract.py  test_macos_m2.py  test_macos_m3.py
tests/e2e/: fixture_app.py  test_fixture_flow.py
tests/integration/: test_dispatcher.py  test_server_e2e.py  test_tools.py
tests/perf/: test_benchmarks.py
tests/stress/: test_soak.py
tests/unit/: test_app_service.py  test_audit.py  test_cli.py  test_clipboard_service.py  test_config.py  test_coords.py  test_dispatcher.py  test_errors.py  test_fake_driver.py  test_keyboard_service.py  test_metrics.py  test_mouse_service.py  test_ocr_service.py  test_permissions.py  test_plugins.py  test_registry.py  test_retry.py  test_screenshot_service.py  test_state.py  test_tools_apps.py  test_tools_ax.py  test_tools_clipboard.py  test_tools_observe_m2.py  test_tools_sequence.py  test_tools_windows.py  test_types.py  test_verification.py  test_version.py  test_vision.py  test_vision_diff.py  test_waiter.py  test_window_service.py
