[project]
name = "hands"
version = "0.1.0"
description = "macOS computer-use MCP server for autonomous AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anyio>=4.4",
    "pillow>=10.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
macos = [
    "pyobjc-framework-Quartz>=10.2; sys_platform == 'darwin'",
    "pyobjc-framework-Vision>=10.2; sys_platform == 'darwin'",
    "pyobjc-framework-ScreenCaptureKit>=10.2; sys_platform == 'darwin'",
]

[project.scripts]
hands = "hands.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hands"]

[tool.pytest.ini_options]
testpaths = ["tests"]
